# oxyl

./: .gitignore  .replit  Cargo.toml  LICENSE  Makefile  README.md  api.go  default.nix  go.mod  go.sum  main.go  nodes.go  oxyl.nim  shell.nix  test.oxyl
cmd/: build.go  root.go  version.go
err/: error.go
error/: error.go
info/: info.go
lexer/: lexeme.go  lexer.go  lexer_test.go  token.go  token_type.go
oxylc/: Cargo.toml  README.md
oxylc-fuzzer/: Cargo.toml  README.md
oxylc-macro/: Cargo.toml
oxylc-macro/src/: lib.rs
oxylc/src/: lib.rs  main.rs
oxylc/src/ast/: block.rs  expression.rs  file.rs  function.rs  ident.rs  identifier.rs  mod.rs  span.rs  statement.rs  value.rs
oxylc/src/ast/initial/: block.rs  expression.rs  function.rs  identifier.rs  mod.rs
oxylc/src/compile/: mod.rs
oxylc/src/compile/lowering/: mod.rs
oxylc/src/compile/parser/: block.rs  errors.rs  functions.rs  ident.rs  mod.rs  oxyl.pest  statement.rs  value.rs
oxylc/src/compile/parser/expression/: application.rs  apply.rs  mod.rs  tests.rs  utils.rs
oxylc/src/compiling/parser/: block.rs  comments.rs  errors.rs  expression.rs  functions.rs  mod.rs  statement.rs
oxylc/src/fst/: block.rs  comment.rs  expression.rs  function.rs  identifier.rs  mod.rs  value.rs
oxylc/src/parser/: block.rs  comments.rs  errors.rs  expression.rs  functions.rs  ident.rs  mod.rs  oxyl.pest  rules.rs  statement.rs  tests.rs  utils.rs  value.rs
oxylc/src/parser/_tmp/: comment.rs  expression.rs  functions.rs  statement.rs  utils.rs
oxylc/src/parser/rules/: file.rs
oxylc/src/repr/: mod.rs
oxylc/src/repr/fst/: application.rs  block.rs  expression.rs  function.rs  identifier.rs  mod.rs  statement.rs  value.rs  visitor.rs
parser/: nodes.go
spec/: book.toml
src/: ast.rs  card.rs  chess.rs  db.rs  error.rs  main.rs  types.rs  ui.rs
std/: float.go  int.go  none.go  operators.go  types.go  (+1 more)
(+51 files in other folders)
