[package]
    name              = "oxylc"
    version           = "0.1.0"
    description       = "The compiler for the Oxyl programming language."
    edition.workspace = true
    authors.workspace = true
    license.workspace = true

[dependencies]
    thiserror   = "^2.0.12"
    pest        = "^2.8.0"
    pest_derive = "^2.8.0"

[lib]
    name = "oxylc"
    path = "src/lib.rs"
